[gd_scene load_steps=3 format=3 uid="uid://cnnkyqysqqyar"]

[ext_resource type="Theme" uid="uid://bql5sxaowafw3" path="res://resources/theme/wc3_theme.tres" id="1_vaewn"]
[ext_resource type="Script" path="res://src/title_screen/lan_match/lan_connect_menu.gd" id="2_82rep"]

[node name="LanConnectMenu" type="PanelContainer" node_paths=PackedStringArray("_address_edit")]
custom_minimum_size = Vector2(900, 400)
theme = ExtResource("1_vaewn")
theme_type_variation = &"MainPanelContainer"
script = ExtResource("2_82rep")
_address_edit = NodePath("VBoxContainer/GridContainer/PanelContainer2/MarginContainer/HBoxContainer/Address Edit")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelLarge"
text = "LAN Multiplayer"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/v_separation = 10
columns = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/GridContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/GridContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/GridContainer/PanelContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "IP Address:"

[node name="Address Edit" type="LineEdit" parent="VBoxContainer/GridContainer/PanelContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="JoinButton" type="Button" parent="VBoxContainer/GridContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Join"

[node name="CreateButton" type="Button" parent="VBoxContainer/GridContainer/VBoxContainer"]
layout_mode = 2
text = "Create"

[node name="CancelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Cancel"

[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/VBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
